removed fern, removed duplicate pricing info

--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -38,7 +38,7 @@ result.output.forEach((p) => console.log(`${p.name}: $${p.price} (${p.rating}★
 ```
 </CodeGroup>
 
-~8-12 steps, ~$0.05-0.07
+~8-12 steps with Browser Use 2.0. See [Pricing](/pricing) for cost per model.
 
 ---
 
@@ -230,7 +230,7 @@ console.log(result);
 ```
 </CodeGroup>
 
-$0.02 per execution
+See [Pricing](/pricing) for skill execution costs.
 
 ---
 
@@ -304,7 +304,7 @@ async with async_playwright() as p:
 await client.browsers.stop(browser.id)
 ```
 
-$0.06/hour
+See [Pricing](/pricing) for browser session costs.
 
 ---
 
