--- a/docs/guides/browser-api.mdx
+++ b/docs/guides/browser-api.mdx
@@ -29,7 +29,8 @@ console.log(browser.liveUrl);
 
 ## Connect with Playwright
 
-```python
+<CodeGroup>
+```python Python
 from playwright.async_api import async_playwright
 from browser_use_sdk import AsyncBrowserUse
 
@@ -45,22 +46,102 @@ async with async_playwright() as p:
 
 await client.browsers.stop(browser.id)
 ```
+```typescript TypeScript
+import { BrowserUse } from "browser-use-sdk";
+import { chromium } from "playwright";
 
-<Info>
-  You can also connect with [Puppeteer](https://pptr.dev/) (`browserWSEndpoint`) or [Selenium](https://www.selenium.dev/) (`debugger_address`). The CDP URL works with any compatible library.
-</Info>
+const client = new BrowserUse();
+const browser = await client.browsers.create();
+
+const pw = await chromium.connectOverCDP(browser.cdpUrl);
+const page = pw.contexts()[0].pages()[0];
+await page.goto("https://example.com");
+console.log(await page.title());
+await pw.close();
+
+await client.browsers.stop(browser.id);
+```
+</CodeGroup>
+
+## Connect with Puppeteer
+
+```typescript
+import puppeteer from "puppeteer-core";
+import { BrowserUse } from "browser-use-sdk";
+
+const client = new BrowserUse();
+const browser = await client.browsers.create();
+
+const pw = await puppeteer.connect({ browserWSEndpoint: browser.cdpUrl });
+const [page] = await pw.pages();
+await page.goto("https://example.com");
+console.log(await page.title());
+await pw.close();
+
+await client.browsers.stop(browser.id);
+```
+
+## Connect with Selenium
+
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from browser_use_sdk import AsyncBrowserUse
+
+client = AsyncBrowserUse()
+browser = await client.browsers.create()
+
+options = Options()
+options.debugger_address = browser.cdp_url.replace("ws://", "").replace("/devtools/browser/", "")
+driver = webdriver.Chrome(options=options)
+driver.get("https://example.com")
+print(driver.title)
+driver.quit()
+
+await client.browsers.stop(browser.id)
+```
+
+## Manage sessions
+
+<CodeGroup>
+```python Python
+from browser_use_sdk import AsyncBrowserUse
+
+client = AsyncBrowserUse()
+
+# List active sessions
+sessions = await client.browsers.list()
+
+# Get a specific session
+session = await client.browsers.get(browser_id)
+
+# Stop a session
+await client.browsers.stop(browser_id)
+```
+```typescript TypeScript
+import { BrowserUse } from "browser-use-sdk";
+
+const client = new BrowserUse();
+
+const sessions = await client.browsers.list();
+const session = await client.browsers.get(browserId);
+await client.browsers.stop(browserId);
+```
+</CodeGroup>
+
+<Warning>
+  Always stop browser sessions when done. Sessions left running will continue to incur charges until the timeout expires.
+</Warning>
 
 ## Parameters
 
 | Parameter | Type | Description |
 |-----------|------|-------------|
-| `profile_id` | `str` | Load a saved browser profile. |
-| `proxy_country_code` | `str` | Proxy country code. |
-| `timeout` | `int` | Session timeout. Max: 4 hours. |
-| `browser_screen_width` | `int` | Width in pixels. |
-| `browser_screen_height` | `int` | Height in pixels. |
-| `custom_proxy` | `CustomProxy` | Custom proxy config. |
+| `profile_id` | `str` | Load a saved browser profile (cookies, localStorage). |
+| `proxy_country_code` | `str` | Proxy country code (e.g. `us`, `de`, `jp`). 195+ countries. |
+| `timeout` | `int` | Session timeout in minutes. Max: 240 (4 hours). |
+| `browser_screen_width` | `int` | Browser width in pixels. |
+| `browser_screen_height` | `int` | Browser height in pixels. |
+| `custom_proxy` | `CustomProxy` | Bring your own proxy (HTTP or SOCKS5). See [Proxies](/guides/proxies-and-stealth#custom-proxy). |
 
-## Pricing
-
-$0.06/hour (Business/Scaleup: $0.03/hour). Min charge: 1 minute. Max timeout: 4 hours.
+See [Models & Pricing](/pricing) for browser session and proxy costs.
