--- a/docs/guides/mcp-server.mdx
+++ b/docs/guides/mcp-server.mdx
@@ -67,8 +67,8 @@ Add to `~/.codeium/windsurf/mcp_config.json`:
 
 | Tool | Description | Cost |
 |------|-------------|------|
-| `browser_task` | Run a full automation task | $0.006/step |
-| `execute_skill` | Run a skill | $0.01 |
+| `browser_task` | Run a full automation task | $0.01 init + per-step (default $0.006/step). See [Pricing](/pricing). |
+| `execute_skill` | Run a skill | $0.02/call |
 | `list_skills` | List available skills | Free |
 | `get_cookies` | Extract cookies for auth | Free |
 | `list_browser_profiles` | List profiles | Free |
