--- a/docs/guides/proxies-and-stealth.mdx
+++ b/docs/guides/proxies-and-stealth.mdx
@@ -92,12 +92,4 @@ const session = await client.sessions.create({
 ```
 </CodeGroup>
 
-## Pricing
-
-| Plan | Cost per GB |
-|------|-------------|
-| Pay As You Go | $10 |
-| Business | $5 |
-| Scaleup | $4 |
-
-Proxy is a session-level setting. All tasks in the same session use the same proxy.
+Proxy is a session-level setting. All tasks in the same session use the same proxy. See [Models & Pricing](/pricing) for proxy costs.
