--- a/docs/guides/skills.mdx
+++ b/docs/guides/skills.mdx
@@ -95,14 +95,4 @@ const result = await client.marketplace.execute(skillId, { parameters: { ... } }
 ```
 </CodeGroup>
 
-## Pricing
-
-| Action | Pay As You Go | Business/Scaleup |
-|--------|---------------|-------------------|
-| Create | $2 | $1 |
-| Execute | $0.02 | $0.01 |
-| Refine | Free | Free |
-
-<Info>
-  Skill creation is charged upfront when you start. If you cancel before generation completes, you get a full refund.
-</Info>
+See [Models & Pricing](/pricing) for skill costs.
