--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -32,7 +32,7 @@ npm install browser-use-sdk
 ```
 </CodeGroup>
 
-Get a key at [cloud.browser-use.com](https://cloud.browser-use.com), then:
+Get a key at [cloud.browser-use.com/settings](https://cloud.browser-use.com/settings?tab=api-keys), then:
 
 ```bash
 export BROWSER_USE_API_KEY=your_key
