--- a/docs/guides/webhooks.mdx
+++ b/docs/guides/webhooks.mdx
@@ -47,6 +47,7 @@ import { createHmac, timingSafeEqual } from "crypto";
 
 function verifyWebhook(payload: string, signature: string, secret: string): boolean {
   const expected = createHmac("sha256", secret).update(payload).digest("hex");
+  if (expected.length !== signature.length) return false;
   return timingSafeEqual(Buffer.from(expected), Buffer.from(signature));
 }
 ```
