--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -76,13 +76,16 @@ class Post(BaseModel):
     url: str
     points: int
 
+class PostList(BaseModel):
+    items: list[Post]
+
 async def main():
     client = AsyncBrowserUse()
     result = await client.run(
         "Get the top 3 posts from Hacker News",
-        output_schema=list[Post],
+        output_schema=PostList,
     )
-    for post in result.output:
+    for post in result.output.items:
         print(f"{post.title} ({post.points} pts)")
 
 asyncio.run(main())
