--- a/docs/new-features/api-v3.mdx
+++ b/docs/new-features/api-v3.mdx
@@ -1,20 +1,16 @@
 ---
-title: API V3 Agent (Experimental)
+title: BU Agent API (Experimental)
 description: A new, more powerful browser agent built from scratch.
 icon: rocket
 ---
 
-<Note>
-  API V3 is experimental. The interface may change.
-</Note>
-
 ## What is it?
 
-A completely new agent built from scratch — way more powerful than V2 at general web intelligence. Think **Claude Code for the browser**: web scraping, data extraction, file manipulation, and complex multi-step workflows.
+A completely new agent built from scratch. Think **Claude Code for the browser**: web scraping, data extraction, file manipulation, and complex multi-step workflows.
 
 **Example:** *"Here's a CSV with 50 people. For each person, find their LinkedIn profile, extract their current title and company, and return an enriched CSV."*
 
-The V3 agent handles the entire pipeline in a single task.
+The BU Agent handles the entire pipeline in a single task.
 
 ## Quick start
 
@@ -80,10 +76,14 @@ console.log(result.output);
 </CodeGroup>
 
 <CardGroup cols={2}>
-  <Card title="API V3 Reference" icon="code" href="/api-v3/sessions/create-session">
+  <Card title="BU Agent API Reference" icon="code" href="/api-v3/sessions/create-session">
     Full endpoint reference.
   </Card>
-  <Card title="Agent Tasks (V2)" icon="play" href="/guides/tasks">
-    V2 task guide.
+  <Card title="Agent Tasks" icon="play" href="/guides/tasks">
+    Task guide.
   </Card>
 </CardGroup>
+
+<Note>
+  The BU Agent API is experimental. The interface may change.
+</Note>
